# Native macOS ARM64 V8 configuration for Servo's experimental bridge.
is_debug = false
is_official_build = false
symbol_level = 0
is_component_build = false

target_cpu = "arm64"
v8_target_cpu = "arm64"

use_siso = false
use_custom_libcxx = true
use_clang_modules = false

v8_monolithic = true
v8_use_external_startup_data = false
v8_generate_external_defines_header = true
v8_use_default_hasher_secret = false

v8_enable_pointer_compression = true
v8_enable_pointer_compression_shared_cage = true
v8_enable_external_code_space = true
v8_enable_sandbox = true
v8_enable_partition_alloc = false

v8_enable_sparkplug = true
v8_enable_maglev = true
v8_enable_turbofan = true
v8_enable_webassembly = true
v8_enable_fuzztest = false
v8_wasm_random_fuzzers = false

v8_enable_i18n_support = true
icu_use_data_file = false
icu_copy_icudata_to_root_build_dir = false
v8_enable_temporal_support = false

# v8_generate_external_defines_header defines feature macros only after
# v8config.h is included. This V8 revision's gc-info.cc tests this macro before
# that include, so use cppgc's portable table-based registration path.
cppgc_enable_object_section_gcinfo = false
